fix: google maps height on mobile

--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -151,7 +151,7 @@
 }
 /* Location */
 #googleMaps {
-    height: 700px;
+    height: 60vh;
     padding: 0;
     iframe {
         width: 100%;
